--- a/WebContent/resources/css/style.css
+++ b/WebContent/resources/css/style.css
@@ -41,6 +41,7 @@ th, td {
     padding: 6px 12px;
     border: 1px solid #ccc;
     border-top: none;
+    width:100% !important;
 }
 
 #mostrar{
@@ -94,4 +95,10 @@ marg-top{
 .imagen-carta{
 	height: 50px;
 }
+.presentacion{
+	margin-bottom: 3em;
+}
+/* .ocultar{ */
+/* 	display:none; */
+/* } */
 
